syntax = "proto3";

package product;
option go_package = "grpc-golang/pb;pb";

service ProductService {
  rpc GetProduct(GetProductRequest) returns (GetProductResponse);
}

message GetProductRequest {
  string product_id = 1;
}

message GetProductResponse {
  string product_id = 1;
  string name = 2;
  float price = 3;
}
